<package>
  <name>robothand_description</name>
  <version>0.1.0</version>

  <description>This package is partially based on URDF tutorials by David V. Lu (davidvlu@gmail.com) </description>

  <author>Casimir Sowinski</author>

  <maintainer email="casimir@pdx.edu">David V. Lu!!</maintainer>

  <license>BSD</license>
  <url>https://github.com/Robot-Hand/Robot-Hand.git</url>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roslaunch</build_depend>
  <run_depend>controller_manager</run_depend>
  <run_depend>diff_drive_controller</run_depend>
  <run_depend>gazebo_ros</run_depend>
  <run_depend>joint_state_controller</run_depend>
  <run_depend>joint_state_publisher</run_depend>
  <run_depend>position_controllers</run_depend>
  <run_depend>pr2_description</run_depend>
  <run_depend>robot_state_publisher</run_depend>
  <run_depend>rqt_robot_steering</run_depend>
  <run_depend>rviz</run_depend>
  <run_depend>urdf</run_depend>
  <run_depend>xacro</run_depend>

</package>
